--- a/tnpsc_assistant.ipynb
+++ b/tnpsc_assistant.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b17c5f79",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.7' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: '/bin/python -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -1236,11 +1243,25 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "947e59be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
